Adjust padding slightly, to prevent text getting cut off
Addresses #774, #930

--- a/static/less/homepage.less
+++ b/static/less/homepage.less
@@ -27,7 +27,6 @@
         z-index: inherit;
       }
 
-
       .next { 
         height: 100%;
         background: #fff url('../img/right-arrow2.jpg') no-repeat right 50%;
@@ -260,13 +259,15 @@
       line-height: 1em;
       text-align:left;
     }
+
     .featured-type {
       color: @medium-gray;
       font-weight: bold;
     }
+
     .slides li {
       .title, .image, .text {
-        padding: 0 24px;
+        padding: 0 26px;
 
         @media (min-width: @screen-sm-min) {
           padding: 0 76px;
